--- a/index.html
+++ b/index.html
@@ -1,95 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guy Even-Chen Portfolio</title>
-    <link rel="stylesheet" href="style/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style/index.css" />
+  </head>
+  <body>
     <header>
-        <nav class="NavBarFixed">
-            <ul class="NavBar">
-                <img src=" Images/ProfilePicture2.jpg" alt="My Profile Picture" class="ProfilePictureNavBar">
-                <h3>Guy Even-Chen</h3>
-                <li><a href="#home-section">Home</a></li>
-                <li><a href="#about-me-section">About</a></li>
-                <li><a href="#services-section">Services</a></li>
-                <li><a href="#contact-me-section">Contact me</a></li>
-            </ul>
-        </nav>
+      <nav class="NavBarFixed">
+        <ul class="NavBar">
+          <img
+            src=" Images/ProfilePicture2.jpg"
+            alt="My Profile Picture"
+            class="ProfilePictureNavBar"
+          />
+          <h3>Guy Even-Chen</h3>
+          <li><a href="#home-section">Home</a></li>
+          <li><a href="#about-me-section">About</a></li>
+          <li><a href="#services-section">Services</a></li>
+          <li><a href="#contact-me-section">Contact me</a></li>
+        </ul>
+      </nav>
     </header>
-    <div id="home-section" class="Home">
-        <h1 >My Portfolio</h1>
-        <p>This is my work portfolio, here you can find all the projects I have done.<br>
-            Project's related to Full Stack Web Development and Cyber Security Tools.
-        </p>
-    </div>
+    <section id="home-section" class="Home">
+      <h1>My Portfolio</h1>
+      <p>
+        This is my professional work portfolio, here you can find all the
+        projects I have made.<br />
+        Project's related to Full Stack Web Development and Cyber Security
+        Tools.
+      </p>
+    </section>
     <div class="TechnologyPicture">
-        <img src="Images/HTML5.png" alt="HTML 5 Logo">
-        <img src="Images/CSS.png" alt="CSS Logo">
-        <img src="Images/BootStrap.png" alt="BootStrap Logo">
-        <img src="Images/Sass.png" alt="Sass Logo">
-        <img src="Images/JS.png" alt="JavaScript Logo">
-        <img src="Images/NodeJS.png" alt="Node JS Logo">
-        <img src="Images/React.png" alt="React Logo">
-        <img src="Images/Bash.png" alt="Bash Logo">
-        <img src="Images/Python.png" alt="Python Logo">
+      <img src="Images/HTML5.png" alt="HTML 5 Logo" />
+      <img src="Images/CSS.png" alt="CSS Logo" />
+      <img src="Images/BootStrap.png" alt="BootStrap Logo" />
+      <img src="Images/Sass.png" alt="Sass Logo" />
+      <img src="Images/JS.png" alt="JavaScript Logo" />
+      <img src="Images/NodeJS.png" alt="Node JS Logo" />
+      <img src="Images/React.png" alt="React Logo" />
+      <img src="Images/Bash.png" alt="Bash Logo" />
+      <img src="Images/Python.png" alt="Python Logo" />
     </div>
-    <div class="SectionProfilePicture"> <img src="Images/ProfilePicture.jpg" alt="Profile Picture 2" class="ProfilePictureSection"></div>
+    <div class="SectionProfilePicture">
+      <img
+        src="Images/ProfilePicture.jpg"
+        alt="Profile Picture 2"
+        class="ProfilePictureSection"
+      />
+    </div>
 
     <div class="AboutMe">
-        <h3>About me: </h3>
-        <div>
-        <p> 
-            I am a dedicated Full Stack Web Developer and Cyber Security Enthusiast with a passion for creating innovative and secure web applications.<br>
-            Over the past two years, I have honed my skills and gained extensive experience in the field, working on a variety of projects that have challenged and expanded my expertise.<br>
-            My technical proficiency includes a strong command of HTML, CSS, JavaScript, NodeJS, React, Python, Bash, and other programming languages and frameworks.<br>
-            In addition to my development skills, I have a solid background in cyber security, having worked with numerous tools and technologies to ensure the safety and integrity of web applications.<br>
-            I am adept at building scripts and automating processes to enhance efficiency and security.<br>
-            I am always eager to take on new challenges and collaborate with others who share my enthusiasm for technology.<br>
-            Feel free to contact me if you have any questions, need assistance with a project, or are interested in working together to create something exceptional.
-            
+      <h2>About me:</h2>
+      <div>
+        <p>
+          I am a dedicated Full Stack Web Developer and Cyber Security
+          Enthusiast with a passion for creating innovative and secure web
+          applications.<br />
+          Over the past two years, I have honed my skills and gained extensive
+          experience in the field, working on a variety of projects that have
+          challenged and expanded my expertise.<br />
+          My technical proficiency includes a strong command of HTML, CSS,
+          JavaScript, NodeJS, React, Python, Bash, and other programming
+          languages and frameworks.<br />
+          In addition to my development skills, I have a solid background in
+          cyber security, having worked with numerous tools and technologies to
+          ensure the safety and integrity of web applications.<br />
+          I am adept at building scripts and automating processes to enhance
+          efficiency and security.<br />
+          I am always eager to take on new challenges and collaborate with
+          others who share my enthusiasm for technology.<br />
+          Feel free to contact me if you have any questions, need assistance
+          with a project, or are interested in working together to create
+          something exceptional.
         </p>
-        <br>
-        <a class="Resume" href="path/to/your/resume.pdf" download="Guy_Even-Chen_Resume.pdf">Download My Resume <img class="ResumeIcon" src=" Images/Resume.png " alt="Download Icon "></a>  
-        
-        </div>
+        <br />
+        <a
+          class="Resume"
+          href="files/Guy Even-Chen_Resume.pdf"
+          download="Guy_Even-Chen_Resume.pdf"
+          >Download My Resume
+          <img
+            class="ResumeIcon"
+            src=" Images/Resume.png "
+            alt="Download Icon "
+        /></a>
+      </div>
     </div>
 
-    <div>
-        <div class="MyProjects">
+    <section class="ProjectSection">
+        <h2> The Projects:</h2>
+
+        <div class="ProjectBox">
+
             <div class="ProjectContainer">
-                <img src="https://www.google.com/imgres?q=soke%20weed&imgurl=https%3A%2F%2Fwww.ucsf.edu%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Ftwo_col_banner_medium%2Fpublic%2F2024-02%2Fjoint-between-fingers-smoke-vertical.jpg&imgrefurl=https%3A%2F%2Fwww.ucsf.edu%2Fnews%2F2024%2F02%2F427176%2Fthink-smoking-cannabis-wont-damage-your-heart-think-again&docid=JmO2ExhKtbw8hM&tbnid=TBoPdeitrtwEHM&vet=12ahUKEwis7-XinsWKAxWmTaQEHUKpE5IQM3oECEsQAA..i&w=1050&h=1138&hcb=2&ved=2ahUKEwis7-XinsWKAxWmTaQEHUKpE5IQM3oECEsQAA"
-                    alt="Weed Picture">
-                <h3>This is the HTML Project</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quidem autem ipsa ratione, officia
-                    facere! Inventore libero labore omnis quam.</p>
+                <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
+                <h4> HTML Project 1</h4>
+                <p>
+                    This is a description of the first project. It is a project that I have worked on and I am proud of.
+                </p>
+                <a class="ProjectBotton" href="project.html"> Show Project</a>
             </div>
 
+            <div class="ProjectContainer">
+                <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
+                <h4> HTML Project 1</h4>
+                <p>
+                    This is a description of the first project. It is a project that I have worked on and I am proud of.
+                </p>
+                <a class="ProjectBotton" href="project.html"> Show Project</a>
+            </div>
 
-...
-<div id="contact-me-section" class="Contact">
-    <h2>Contact Me</h2>
-    <form action="/submit_form" method="post">
-        <label for="full-name">Full Name:</label>
-        <input type="text" id="full-name" name="full-name" required><br><br>
+            <div class="ProjectContainer">
+                <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
+                <h4> HTML Project 1</h4>
+                <p>
+                    This is a description of the first project. It is a project that I have worked on and I am proud of.
+                </p>
+                <a class="ProjectBotton" href="project.html"> Show Project</a>
+            </div>
 
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone" required><br><br>
+            <div class="ProjectContainer">
+                <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
+                <h4> HTML Project 1</h4>
+                <p>
+                    This is a description of the first project. It is a project that I have worked on and I am proud of.
+                </p>
+                <a class="ProjectBotton" href="project.html"> Show Project</a>
+            </div>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+            <div class="ProjectContainer">
+                <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
+                <h4> HTML Project 1</h4>
+                <p>
+                    This is a description of the first project. It is a project that I have worked on and I am proud of.
+                </p>
+                <a class="ProjectBotton" href="project.html"> Show Project</a>
+            </div>
 
-        <label for="description">Description:</label><br>
-        <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
+            </div>
 
-        <input type="submit" value="Submit">
-    </form>
-</div>
-                </div>
+        </div>
 
-</body>
+      </section>
 
+
+
+
+
+
+
+
+
+      <div id="contact-me-section" class="Contact">
+        <h2>Contact Me</h2>
+        <form action="/submit_form" method="post">
+          <label for="full-name">Full Name:</label>
+          <input
+            type="text"
+            id="full-name"
+            name="full-name"
+            required
+          /><br /><br />
+
+          <label for="phone">Phone:</label>
+          <input type="tel" id="phone" name="phone" required /><br /><br />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required /><br /><br />
+
+          <label for="description">Description:</label><br />
+          <textarea
+            id="description"
+            name="description"
+            rows="4"
+            cols="50"
+            required
+          ></textarea
+          ><br /><br />
+
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
