--- a/index.html
+++ b/index.html
@@ -140,22 +140,16 @@
             </div>
 
             </div>
-
         </div>
-
       </section>
-
-
-
-
-
-
 
 
 
       <div id="contact-me-section" class="Contact">
         <h2>Contact Me</h2>
-        <form action="/submit_form" method="post">
+        <img class="ContactBackgroundWallpaper" src="Images/EmailBackgroundPicture.jpg" alt="Email background wallpaper">
+        
+        <form class="Form" action="/submit_form" method="post">
           <label for="full-name">Full Name:</label>
           <input
             type="text"
@@ -184,5 +178,20 @@
         </form>
       </div>
     </div>
+    <div class="SocialMediaBar">
+        <a href="">Linkedin</a>
+        <a href="">GitHub</a>
+        <a href="">Facebook</a>
+        <a href="">Instagram</a>
+    </div>
+
+
+
+    <footer>
+      <div class="Footer">
+        <p>
+          &copy; 2025 Guy Even-Chen. All rights reserved.
+        </p>
+      </div>
   </body>
 </html>
