--- a/index.html
+++ b/index.html
@@ -143,19 +143,13 @@
         </div>
       </section>
 
-
-
+      <div class="ContactMe">
+      <h2>Contact me:</h2> 
       <div id="contact-me-section" class="Contact">
-        <h2>Contact Me</h2>
-        <img class="ContactBackgroundWallpaper" src="Images/EmailBackgroundPicture.jpg" alt="Email background wallpaper">
-        
-        <form class="Form" action="/submit_form" method="post">
+        <form class="Form" action="/s ubmit_form" method="post">
           <label for="full-name">Full Name:</label>
           <input
-            type="text"
-            id="full-name"
-            name="full-name"
-            required
+            type="text"id="full-name"name="full-name" required
           /><br /><br />
 
           <label for="phone">Phone:</label>
@@ -166,11 +160,7 @@
 
           <label for="description">Description:</label><br />
           <textarea
-            id="description"
-            name="description"
-            rows="4"
-            cols="50"
-            required
+            id="description"name="description"rows="4"cols="50"required
           ></textarea
           ><br /><br />
 
@@ -178,14 +168,13 @@
         </form>
       </div>
     </div>
+    </div>
     <div class="SocialMediaBar">
         <a href="">Linkedin</a>
         <a href="">GitHub</a>
         <a href="">Facebook</a>
         <a href="">Instagram</a>
     </div>
-
-
 
     <footer>
       <div class="Footer">
