--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 1</h4>
+                <h4> HTML Project 2</h4>
                 <p>
                     This is a description of the first project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -114,7 +114,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 1</h4>
+                <h4> HTML Project 3</h4>
                 <p>
                     This is a description of the first project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -123,7 +123,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 1</h4>
+                <h4> HTML Project 4</h4>
                 <p>
                     This is a description of the first project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -132,7 +132,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 1</h4>
+                <h4> HTML Project 5</h4>
                 <p>
                     This is a description of the first project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -148,8 +148,7 @@
       <div id="contact-me-section" class="Contact">
         <form class="Form" action="/s ubmit_form" method="post">
           <label for="full-name">Full Name:</label>
-          <input
-            type="text"id="full-name"name="full-name" required
+          <input type="text"id="full-name"name="full-name" required
           /><br /><br />
 
           <label for="phone">Phone:</label>
@@ -164,7 +163,7 @@
           ></textarea
           ><br /><br />
 
-          <input type="submit" value="Submit" />
+          <input type="submit" value="Send to Guy " />
         </form>
       </div>
     </div>
