--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
                 </p>
                 <a class="ProjectButton" href="project.html"> Show Project</a>
             </div>
+            <div class="ProjectContainer">
+                <img src="Images/ProjectPicture6.jpg" alt="Project 1" class="ProjectImage" />
+                <h4> HTML Project 6</h4>
+                <p>
+                    This is a description of the six project. It is a project that I have worked on and I am proud of.
+                </p>
+                <a class="ProjectButton" href="project.html"> Show Project</a>
+            </div>
 
             </div>
         </div>
