--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <img src="Images/ProjectPicture6.jpg" alt="Project 1" class="ProjectImage" />
                 <h4> HTML Project 6</h4>
                 <p>
-                    This is a description of the six project. It is a project that I have worked on and I am proud of.
+                    This is a description of the six project.<br> It is a project that I have worked on and I am proud of.
                 </p>
                 <a class="ProjectButton" href="project.html"> Show Project</a>
             </div>
