--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
               <input type="email" id="email" name="email" required />
               <br /><br />
       
-              <label for="description">Reason for referral:</label><br />
-              <textarea id="description" name="description" rows="3" cols="3" required></textarea>
+              <label for="description">Reason:</label><br />
+              <textarea id="description" name="description" rows="3" required></textarea>
               <br /><br />
       
               <input type="submit" value="Send to Guy" /></form>
