--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -25,13 +25,21 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
         <div class="ProjectButtons">
           <a href="https://link-to-project.com" class="button" target="_blank">View Project</a>
-          <a href="path/to/project.zip" class="button" download>Download </a>
+          <a href="path/to/project.zip" class="button" download>Download</a>
         </div>
       </p>
 
     </section>
     <div class="TechnologyPicture">
-      <img src="Images/HTML5.png" alt="HTML 5 Logo" />
+      <img src="images/HTML5.png" alt="HTML 5 Logo" />
+      <img src="Images/CSS.png" alt="CSS Logo" />
+      <img src="Images/BootStrap.png" alt="BootStrap Logo" />
+      <img src="Images/JS.png" alt="JavaScript Logo" />
+    </div>
+
+    <div class="ProjectBox">
+      <img class="ProjectBoxImage" src="" alt="Project Landing Page photo">
+
     </div>
 
     <div class="SocialMediaBar">
