--- a/projects/LandingPageProject2/project 2/index.html
+++ b/projects/LandingPageProject2/project 2/index.html
@@ -3,29 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index.css" />
     <title>Project 2</title>
   </head>
   <body>
-    <div class="RightBox">
-      <div class="FormBox">
-      <h2>Coffee for a good morning!</h2>
-      <form class="Form">
-        <label for="full-name">Full Name:</label>
-        <input type="text" id="full-name" placeholder="" required />
-        <label for="email">Email:</label>
-        <input type="email" id="email" placeholder="" required />
-        <button type="submit">Submit</button>
-        </div>
+    <
+    <div class="left"></div>
+    <div class="right">
+      <h1>קפה טוב לבוקר טוב</h1>
+      <p>
+        לקבלת קופון לקפה חינם ומפתק שיפתח לכם את היום בריכון, שומלא את הפרטים:
+      </p>
+      <form>
+        <input type="text" name="full name" placeholder="שם מלא" required />
+        <input type="email" name="email" placeholder="מייל" required />
+        <button type="submit">שליחה</button>
       </form>
     </div>
-    <div class="LeftBox">
-        <img
-          class="CoffeeWallpaper"
-          src="images/CoffeeWallpaperBackground.png "
-          alt="Coffee Wallpaper"
-        />
-      </div>
-
   </body>
 </html>
