--- a/projects/LandingPageProject2/project 2/index.html
+++ b/projects/LandingPageProject2/project 2/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <
-    <div class="left"></div>
-    <div class="right">
+    <div class="LeftSide"></div>
+    <div class="RightSide">
       <h1>קפה טוב לבוקר טוב</h1>
       <p>
-        לקבלת קופון לקפה חינם ומפתק שיפתח לכם את היום בריכון, שומלא את הפרטים:
+        : לקבלת קופון לקפה חינם ומפנק שיפתח לכם את היום בחיוך, יש למלא את הפרטים
       </p>
-      <form>
+      <form class="FormArea">
         <input type="text" name="full name" placeholder="שם מלא" required />
         <input type="email" name="email" placeholder="מייל" required />
         <button type="submit">שליחה</button>
