--- a/projects/LandingPageProject2/project 2/index.html
+++ b/projects/LandingPageProject2/project 2/index.html
@@ -7,12 +7,12 @@
     <title>Project 2</title>
   </head>
   <body>
-    <
     <div class="LeftSide"></div>
     <div class="RightSide">
       <h1>קפה טוב לבוקר טוב</h1>
       <p>
-        : לקבלת קופון לקפה חינם ומפנק שיפתח לכם את היום בחיוך, יש למלא את הפרטים
+        לקבלת קופון לקפה חינם ומפנק שיפתח לכם את<br />
+        : היום בחיוך, יש למלא את הפרטים
       </p>
       <form class="FormArea">
         <input type="text" name="full name" placeholder="שם מלא" required />
