--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="ProjectBox">
 
             <div class="ProjectContainer">
-                <img src="Images/ProjectPicture1.jpg" alt="Project 1" class="ProjectImage" />
+                <img src="Images/CoffreeProjectWallpaper.png" alt="Project 1" class="ProjectImage" />
                 <h4> HTML Project 1</h4>
                 <p>
                     This is a description of the first project. It is a project that I have worked on and I am proud of.
