--- a/projects/LandingPageProject2/index.html
+++ b/projects/LandingPageProject2/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="ProjectBox">
-      <img class="ProjectBoxImage" src="images/ProjectPicture.png" alt="Project Landing Page photo">
+      <img class="ProjectBoxImage" src="images/CoffreeProjectWallpaper.png " alt="Project Landing Page photo">
 
     </div>
 
