--- a/projects/LandingPageProject3/index.html
+++ b/projects/LandingPageProject3/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <section class="Home">
-      <h1>Project #</h1>
+      <h1>Project 3</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
         <div class="ProjectButtons">
@@ -38,7 +38,7 @@
     </div>
 
     <div class="ProjectBox">
-      <img class="ProjectBoxImage" src="images/ProjectPicture.png" alt="Project Landing Page photo">
+      <img class="ProjectBoxImage" src="images/BackgorundPorjectWallpaper.png" alt="Project Landing Page photo">
 
     </div>
 
