--- a/projects/LandingPageProject2/index.html
+++ b/projects/LandingPageProject2/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <section class="Home">
-      <h1>Project #</h1>
+      <h1>Project 2</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
         <div class="ProjectButtons">
