--- a/projects/LandingPageProject5/project 5/index.html
+++ b/projects/LandingPageProject5/project 5/index.html
@@ -7,39 +7,38 @@
   </head>
   <body>
     <div class="container">
-      <div class="header">
-        <h1>תגלו את העולם</h1>
+      <div class="TextBox">
+        <!--         <h1>לגלות את העולם</h1>
         <p>
           עם טיסות זולות, בתי מלון מפנקים וחוויות בלתי נשכחות, אנו מזמינים אתכם
           לגלות את העולם.
-        </p>
+        </p> -->
       </div>
-
-      <div class="image-grid">
-        <img src="images/9.png" alt="Image 1" />
-        <img src="images/10.png" alt="Image 2" />
-        <img src="images/6.png" alt="Image 3" />
-        <img src="images/11.png" alt="Image 4" />
-        <img src="images/2.png" alt="Image 5" />
-        <img src="images/5.png" alt="Image 6" />
-        <img src="images/4.png" alt="Image 7" />
-        <img src="images/3.png" alt="Image 8" />
-        <img src="images/12.png" alt="Image 9" />
-        <img src="images/14.png" alt="Image 10" />
-        <img src="images/7.png" alt="Image 11" />
-        <img src="images/13.png" alt="Image 12" />
-        <img src="images/1.png" alt="Image 13" />
-        <img src="images/8.png" alt="Image 14" />
-      </div>
-
-      <div class="form">
-        <h2>ספר לנו על החוויות שלכם</h2>
-        <form>
-          <input type="text" id="fullname" placeholder="שם מלא" />
-          <input type="email" id="email" placeholder="דוא״ל" />
-          <textarea id="experience" placeholder="החוויה שלכם"></textarea>
-          <button type="submit">שליחה</button>
-        </form>
+      <div class="ImageBoxs">
+        <div class="image box">Discover The Worlddddddddddd</div>
+        <img class="image image9" src="images/9.png" alt="Image 1" />
+        <img class="image image10" src="images/10.png" alt="Image 2" />
+        <img class="image image6" src="images/6.png" alt="Image 3" />
+        <img class="image image11" src="images/11.png" alt="Image 4" />
+        <img class="image image2" src="images/2.png" alt="Image 5" />
+        <img class="image image5" src="images/5.png" alt="Image 6" />
+        <img class="image image4" src="images/4.png" alt="Image 7" />
+        <img class="image image3" src="images/3.png" alt="Image 8" />
+        <img class="image image12" src="images/12.png" alt="Image 9" />
+        <img class="image image14" src="images/14.png" alt="Image 10" />
+        <img class="image image7" src="images/7.png" alt="Image 11" />
+        <img class="image image13" src="images/13.png" alt="Image 12" />
+        <img class="image image1" src="images/1.png" alt="Image 13" />
+        <img class="image image8" src="images/8.png" alt="Image 14" />
+        <div class="image FormBox">
+          <h2>ספר לנו על החוויות שלכם</h2>
+          <form>
+            <input type="text" id="fullname" placeholder="שם מלא" />
+            <input type="email" id="email" placeholder="דוא״ל" />
+            <textarea id="experience" placeholder="החוויה שלכם"></textarea>
+            <button type="submit">שליחה</button>
+          </form>
+        </div>
       </div>
     </div>
   </body>
