--- a/projects/LandingPageProject5/project 5/index.html
+++ b/projects/LandingPageProject5/project 5/index.html
@@ -7,15 +7,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="TextBox">
-        <!--         <h1>לגלות את העולם</h1>
-        <p>
-          עם טיסות זולות, בתי מלון מפנקים וחוויות בלתי נשכחות, אנו מזמינים אתכם
-          לגלות את העולם.
-        </p> -->
-      </div>
       <div class="ImageBoxs">
-        <div class="image box">Discover The Worlddddddddddd</div>
+        <div class="image box">
+          <h2>לגלות את העולם</h2>
+          <p>
+            לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
+            מקום” בעת עריכ.
+          </p>
+        </div>
         <img class="image image9" src="images/9.png" alt="Image 1" />
         <img class="image image10" src="images/10.png" alt="Image 2" />
         <img class="image image6" src="images/6.png" alt="Image 3" />
