--- a/projects/LandingPageProject5/project 5/index.html
+++ b/projects/LandingPageProject5/project 5/index.html
@@ -15,6 +15,7 @@
             מקום” בעת עריכ.
           </p>
         </div>
+
         <img class="image image9" src="images/9.png" alt="Image 1" />
         <img class="image image10" src="images/10.png" alt="Image 2" />
         <img class="image image6" src="images/6.png" alt="Image 3" />
@@ -29,12 +30,20 @@
         <img class="image image13" src="images/13.png" alt="Image 12" />
         <img class="image image1" src="images/1.png" alt="Image 13" />
         <img class="image image8" src="images/8.png" alt="Image 14" />
+
         <div class="image FormBox">
-          <h2>ספר לנו על החוויות שלכם</h2>
+          <h2>ספרו לנו על החוויה שלכם</h2>
+          <h3>
+            לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
+            מקום” בעת עריכ.
+          </h3>
           <form>
-            <input type="text" id="fullname" placeholder="שם מלא" />
-            <input type="email" id="email" placeholder="דוא״ל" />
-            <textarea id="experience" placeholder="החוויה שלכם"></textarea>
+            <label for="fullname">שם מלא:</label>
+            <input type="text" id="fullname" placeholder="" />
+            <label for="email">דוא״ל:</label>
+            <input type="email" id="email" placeholder="" />
+            <label for="experience">החוויה שלכם:</label>
+            <textarea id="experience" placeholder=""></textarea>
             <button type="submit">שליחה</button>
           </form>
         </div>
