--- a/projects/LandingPageProject4/project 4/index.html
+++ b/projects/LandingPageProject4/project 4/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/index4.css" />
-    <title>Project 4</title>
+    <link rel="stylesheet" href="style/index.css " />
+    <title>test</title>
   </head>
   <body>
     <h1>תן לנו להוביל אותך קדימה</h1>
@@ -12,12 +12,13 @@
       לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום”
       בעת עריכ.
     </h4>
+
     <div class="form">
+      <label for="fullName">שם מלא:</label>
+      <input type="text" placeholder="" />
+      <label for="email">דואל:</label>
+      <input type="email" placeholder="" />
       <button>שליחה</button>
-      <label for="text"></label>
-      <input type="text" placeholder="שם מלא" />
-      <label for="email"></label>
-      <input type="email" placeholder="דואל" />
     </div>
   </body>
 </html>
