--- a/projects/LandingPageProject6/project 6/index.html
+++ b/projects/LandingPageProject6/project 6/index.html
@@ -21,10 +21,34 @@
       </div>
     </div>
     <div class="BoxsContainer">
-      <div class="Box">hello</div>
-      <div class="Box">hello</div>
-      <div class="Box">hello</div>
-      <div class="Box">hello</div>
+      <div class="Box">
+        <img src="images/LocationIcon.png" alt=" GPS Icon" />
+        <p>כותרת אזור</p>
+        <h3>
+          לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
+        </h3>
+      </div>
+      <div class="Box">
+        <img src="images/CardNameIcon.png" alt=" Card Name Icon" />
+        <p>כותרת אזור</p>
+        <h3>
+          לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
+        </h3>
+      </div>
+      <div class="Box">
+        <img src="images/WandIcon.png" alt=" Wand Icon" />
+        <p>כותרת אזור</p>
+        <h3>
+          לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
+        </h3>
+      </div>
+      <div class="Box">
+        <img src="images/BusinessBagIcon.png" alt="Bag Icon" />
+        <p>כותרת אזור</p>
+        <h3>
+          לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
+        </h3>
+      </div>
     </div>
   </body>
 </html>
