--- a/projects/LandingPageProject6/project 6/index.html
+++ b/projects/LandingPageProject6/project 6/index.html
@@ -49,29 +49,32 @@
           לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
         </h3>
       </div>
+    </div>
 
-      <div class="FooterBox">
-        <div class="FooterLeft">
-          <div class="FooterForm">
-            <h2>הקופון עלינו</h2>
-            <p>
-              לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
-            </p>
-            <form action="index.html" method="post">
-                <label for="name">שם מלא:</label>
-                <input type="text" id="name" name="name" placeholder=""/>
-            
-                <label for="email">דואל:</label>
-                <input type="email" id="email" name="email" placeholder=""/>
-                <button> שליחה</button>
-          </div>
+    <footer class="FooterBox">
+      <div class="FooterLeft">
+        <div class="FooterForm">
+          <h2>הקופון עלינו</h2>
+          <p>
+            לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
+          </p>
+          <form action="index.html" method="post">
+            <label for="name">שם מלא:</label>
+            <input type="text" id="name" name="name" placeholder="" />
+
+            <label for="email">דואל:</label>
+            <input type="email" id="email" name="email" placeholder="" />
+
+            <button type="submit">שליחה</button>
+          </form>
         </div>
       </div>
       <div class="FooterRight">
-        <img src="" alt="Location Picture">
-
-
+        <img
+          src="images/GoogleMapsLocationPicture.png"
+          alt="Location Picture"
+        />
       </div>
-    </div>
+    </footer>
   </body>
 </html>
