--- a/projects/LandingPageProject6/project 6/index.html
+++ b/projects/LandingPageProject6/project 6/index.html
@@ -73,8 +73,7 @@
 
             <label for="box">:סיבת ייעוץ</label>
             <textarea name="text" id="Box" required></textarea>
-
-            <button type="submit">שליחה</button>
+            <input class="button" type="button" value="שליחה" />
           </form>
         </div>
       </div>
