--- a/projects/LandingPageProject6/project 6/index.html
+++ b/projects/LandingPageProject6/project 6/index.html
@@ -15,6 +15,13 @@
           מא, מנכם למטכין נשואי מנור. לורם איפסום דולור סיט אמט, קוואזי במר
           מודוף.
         </p>
+        <div class="WhatsappBox">
+          <img
+            class="IconWhatsapp"
+            src="images/IconWhatsapp.svg"
+            alt="Whatsapp Icon"
+          />
+        </div>
       </div>
       <div class="imagebox">
         <img src="images/IconBox.svg" alt="Box Image" />
@@ -51,7 +58,7 @@
       </div>
     </div>
 
-    <footer class="FooterBox">
+    <div class="FooterBox">
       <div class="FooterLeft">
         <div class="FooterForm">
           <h2>הקופון עלינו</h2>
@@ -83,20 +90,22 @@
           alt="Location Picture"
         />
       </div>
-      <div class="ContactIcons">
-        <a href="">
-          <img src="images/FaceBookIcon.png" alt="Facebook icon" />
-        </a>
-        <a href="">
-          <img src="images/InstagramIcon.png" alt="Instagram Icon" />
-        </a>
-        <a href="">
-          <img src="images/LinkedinIcon.png" alt="Linkedin Icon" />
-        </a>
-        <a href="">
-          <img src="images/PhoneIcon.png" alt="Phone Icon" />
-        </a>
-      </div>
-    </footer>
+    </div>
+
+    <div class="ContactIcons">
+      <a href="">
+        <img src="images/FaceBookIcon.png" alt="Facebook icon" />
+      </a>
+      <a href="">
+        <img src="images/InstagramIcon.png" alt="Instagram Icon" />
+      </a>
+      <a href="">
+        <img src="images/LinkedinIcon.png" alt="Linkedin Icon" />
+      </a>
+      <a href="">
+        <img src="images/PhoneIcon.png" alt="Phone Icon" />
+      </a>
+    </div>
+    <div class="Border"></div>
   </body>
 </html>
