--- a/projects/LandingPageProject6/index.html
+++ b/projects/LandingPageProject6/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Project # </title>
+    <title>Landing Project 6 </title>
     <link rel="stylesheet" href="style/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
@@ -12,7 +12,7 @@
       <nav class="NavBarFixed">
         <ul class="NavBar">
           <img
-            src=" Images/ProfilePicture2.jpg"alt="My Profile Picture"class="ProfilePictureNavBar"/>
+            src="Images/ProfilePicture2.jpg"alt="My Profile Picture"class="ProfilePictureNavBar"/>
             <a href="g:\האחסון שלי\Full Stack Developer Course Folder\קורס\GitHub-FullStack\FullStackProject-s\index.html ">
               <h3>Guy Even-Chen</h3>
             </a>    
@@ -20,11 +20,11 @@
       </nav>
     </header>
     <section class="Home">
-      <h1>Project #</h1>
+      <h1>Project 6 </h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
         <div class="ProjectButtons">
-          <a href="https://link-to-project.com" class="button" target="_blank">View Project</a>
+          <a href="./project 6/index.html " class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
         </div>
       </p>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="ProjectBox">
-      <img class="ProjectBoxImage" src="images/ProjectPicture.png" alt="Project Landing Page photo">
+      <img class="ProjectBoxImage" src="./images/BackgorundPorjectWallpaper.png" alt="Project Landing Page photo">
 
     </div>
 
