--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="ProjectContainer">
-                <img src="Images/ProjectPicture2.jpg" alt="Project 1" class="ProjectImage" />
+                <img src=" " alt="Project 1" class="ProjectImage" />
                 <h4> HTML Project 2</h4>
                 <p>
                     This is a description of the second project. It is a project that I have worked on and I am proud of.
