--- a/projects/LandingPageProject1/index.html
+++ b/projects/LandingPageProject1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Project # </title>
+    <title>Landing Project 1 </title>
     <link rel="stylesheet" href="style/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <section class="Home">
-      <h1>Project 2</h1>
+      <h1>Project 1</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
         <div class="ProjectButtons">
