fixed main site project pictures

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="ProjectContainer">
-                <img src=" " alt="Project 1" class="ProjectImage" />
+                <img src="Images/PurpleProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
                 <h4> HTML Project 2</h4>
                 <p>
                     This is a description of the second project. It is a project that I have worked on and I am proud of.
@@ -101,7 +101,7 @@
             </div>
 
             <div class="ProjectContainer">
-                <img src="Images/ProjectPicture3.jpg" alt="Project 1" class="ProjectImage" />
+                <img src="Images/HereNowProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
                 <h4> HTML Project 3</h4>
                 <p>
                     This is a description of the third project. It is a project that I have worked on and I am proud of.
@@ -110,7 +110,7 @@
             </div>
 
             <div class="ProjectContainer">
-                <img src="Images/ProjectPicture4.jpg" alt="Project 1" class="ProjectImage" />
+                <img src="Images/LetUsLeadProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
                 <h4> HTML Project 4</h4>
                 <p>
                     This is a description of the fourth project. It is a project that I have worked on and I am proud of.
@@ -119,7 +119,7 @@
             </div>
 
             <div class="ProjectContainer">
-                <img src="Images/ProjectPicture5.jpg" alt="Project 1" class="ProjectImage" />
+                <img src="Images/GridProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
                 <h4> HTML Project 5</h4>
                 <p>
                     This is a description of the fifth project. It is a project that I have worked on and I am proud of.
@@ -127,7 +127,7 @@
                 <a class="ProjectButton" href="project.html"> Show Project</a>
             </div>
             <div class="ProjectContainer">
-                <img src="Images/ProjectPicture6.jpg" alt="Project 1" class="ProjectImage" />
+                <img src="Images/BoxProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
                 <h4> HTML Project 6</h4>
                 <p>
                     This is a description of the six project.<br> It is a project that I have worked on and I am proud of.
